[tool.poetry]
name = "anc2vec"
version = "0.1.0"
description = "Neural-based approach for constructing embeddings of GO terms."
authors = ["Alejandro A. Edera <aedera@sinc.unl.edu.ar>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "2.4"
#numpy = "1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
